fix: word + pt status text overlapping flag

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -79,6 +79,10 @@ p {
   margin-top: 0;
 }
 
+/* ------- */
+/* Buttons */
+/* ------- */
+
 button {
   padding: 12px 16px;
   font-size: 16px;
@@ -139,3 +143,18 @@ button:focus-visible {
 .button-row-button:last-of-type {
   margin-right: 0;
 }
+
+/* --------------- */
+/* Utility classes */
+/* --------------- */
+
+.desktop-inline {
+  display: none;
+}
+
+@media (min-width: 640px) {
+  .desktop-inline {
+    display: inline;
+  }
+}
+
